<resources>
    <string name="app_name">Android-SNS</string>

    <!--  Sign Up String  -->
    <string name="name">이름</string>
    <string name="ID">아이디</string>
    <string name="InputName">hsdaily</string>
    <string name="E_mail">hsdaily@naver.com</string>
    <string name="pw">비밀번호</string>
    <string name="pw_hint">*******</string>
    <string name="birth">생년월일</string>
    <string name="birth_input">YYYYMMDD</string>
    <string name="ID_Email">이메일</string>
    <string name="signup">회원가입</string>
    <string name="back">뒤로가기</string>


    <!--  Bottom Navigation View  -->
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="add">게시글 작성</string>
    <string name="message">메시지</string>
    <string name="profile">프로필</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="upload">업로드</string>
    <string name="upload_image">업로드</string>
    <string name="description">내용</string>
    <string name="no_permission">No Permission %1$s.</string>
    <string name="req_permission_reason">Requires %1$s permission.</string>

    <string name="post">게시글</string>
    <string name="count_0">0</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">팔로우 취소</string>
    <string name="hint_image_content">hint_image_content</string>
    <string name="hello">hello</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="msg_token_fmt">msg_token_fmt</string>

    <string name="Alarm">알림</string>
    <string name="alarm_favorite">님이 회원님의 게시글에 좋아요를 눌렀습니다.</string>
    <string name="alarm_follow">님이 회원님을 팔로우했습니다.</string>
    <string name="alarm_comment">댓글을 남겼습니다.</string>
    <string name="signout">로그아웃</string>
    <string name="edit">프로필 편집</string>
    <string name="send">게시</string>

</resources>