<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search"/>
    <item
        android:id="@+id/uploadActivity"
        android:icon="@drawable/ic_add_a_photo"
        android:enabled="true"
        android:title="@string/upload"/>
    <item
        android:id="@+id/alarmFragment"
        android:icon="@drawable/ic_alarm"
        android:enabled="true"
        android:title="@string/Alarm"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/profile"/>
</menu>