<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Password"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:background="#3346B5"
        android:gravity="center"
        android:text="@string/pw"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/Birth"
        app:layout_constraintEnd_toStartOf="@+id/Password_Input"
        app:layout_constraintTop_toBottomOf="@+id/ID" />

    <TextView
        android:id="@+id/ID"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:background="#3346B5"
        android:gravity="center"
        android:text="@string/ID_Email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toStartOf="@+id/Email_Input"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Birth"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:background="#3346B5"
        android:gravity="center"
        android:text="@string/birth"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Birth_Input"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginTop="150dp"
        android:background="#3346B5"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ID"
        app:layout_constraintEnd_toStartOf="@+id/Name_Input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/Email_Input"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="55dp"
        android:background="#E1E1E1"
        android:backgroundTint="#E1E1E1"
        android:ems="10"
        android:hint="@string/E_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#8C8C8C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Password_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_Input" />

    <EditText
        android:id="@+id/Name_Input"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="55dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="#E1E1E1"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/InputName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#8C8C8C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/Birth_Input"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="55dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="#E1E1E1"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/birth_input"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#8C8C8C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Input" />

    <EditText
        android:id="@+id/Password_Input"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginEnd="55dp"
        android:background="#E1E1E1"
        android:ems="10"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#8C8C8C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Birth_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Input" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="234dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hs_daily" />

    <android.widget.Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="#3346B5"
        android:backgroundTint="#3346B5"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Birth_Input" />

    <android.widget.Button
        android:id="@+id/Back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:background="#3346B5"
        android:backgroundTint="#3346B5"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Birth_Input" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="Name_Input,Email_Input,Birth_Input,Password,ID,Name,Birth,Password_Input" />

</androidx.constraintlayout.widget.ConstraintLayout>