<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userNam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/account_iv_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/ic_account" />

        <Button
            android:id="@+id/account_btn_follow_signout"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@id/edit_profile"
            android:text="@string/follow" />

        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="52dp"
            android:layout_above="@id/account_btn_follow_signout"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@id/account_iv_profile"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post" />

                <TextView
                    android:id="@+id/account_tv_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower" />

                <TextView
                    android:id="@+id/account_tv_follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/account_tv_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="-1dp"
            android:layout_toRightOf="@id/account_iv_profile"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/account_tv_username"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_iv_profile"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="1dp"
            android:textAlignment="center" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

    <!--    <TextView-->
    <!--        android:id="@+id/aasd"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="프로필" />-->

</LinearLayout>