<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/upload_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"/>
        </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_below="@+id/upload_toolbar"
        android:layout_marginStart="5dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="phone"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText"
            android:layout_below="@id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadImage_edit_explain"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:text="@string/upload_image"
        android:theme="@style/Widget.AppCompat.Button" />

    <EditText
        android:id="@+id/uploadImage_edit_explain"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_below="@+id/editText"
        android:layout_gravity="top"
        android:layout_marginTop="60dp"
        android:hint="@string/description"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadImage_edit_explain"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/back" />
</RelativeLayout>


